--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,4 +16,22 @@ spec:
     spec:
       containers:
         - name: goserver
-          image: abauruel/hello-go:v2
+          image: abauruel/hello-go:v5.4
+          envFrom:
+            - configMapRef:
+                name: goserver-env
+            - secretRef:
+                name: goserver-secret
+          volumeMounts:
+            - mountPath: "/go/myfamily" 
+              name: config
+              readOnly: true
+   
+      volumes:
+        - name: config
+          configMap:
+            name: configmap-family
+            items:
+              - key: members
+                path: "family.txt"
+          
