feat: :wrench: add startupProbe, readinessProbe and livenessProbe

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,33 @@ spec:
     spec:
       containers:
         - name: goserver
-          image: abauruel/hello-go:v5.4
+          image: abauruel/hello-go:v5.6
+          
+          startupProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 3
+            failureThreshold: 30
+          
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 3
+            failureThreshold: 1
+            # initialDelaySeconds: 10
+
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 5
+            failureThreshold: 1
+            timeoutSeconds: 1
+            successThreshold: 1
+            # initialDelaySeconds: 15
+
           envFrom:
             - configMapRef:
                 name: goserver-env
