feat: :wrench: add HPA config
testing usage with fortio

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     matchLabels:
       app: goserver
-  replicas: 2
+  replicas: 1
   template:
     metadata: 
       labels:
@@ -18,6 +18,14 @@ spec:
         - name: goserver
           image: abauruel/hello-go:v5.6
           
+          resources:
+            requests:
+              cpu: "0.05"
+              memory: 20Mi
+            limits: 
+              cpu: "0.05"
+              memory: 25Mi
+
           startupProbe:
             httpGet:
               path: /healthz
